--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,12 @@ abstract: 'be like GETTY (without the insanity hopefully) -- use what drives his
 author:
   - 'Torsten Raudssus <torsten@raudss.us>'
 build_requires:
+  Test::LoadAllModules: 0.021
   Test::More: 0.96
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300024, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300033, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -84,7 +85,6 @@ requires:
   String::ProgressBar: 0
   Template: 2.22
   Template::Provider::Encoding: 0
-  Template::Stash::XS: 0
   Test::Dirs: 0
   Test::LoadAllModules: 0
   Test::More: 0
@@ -98,7 +98,7 @@ requires:
 resources:
   homepage: https://github.com/Getty/p5-task-belike-getty
   repository: https://github.com/Getty/p5-task-belike-getty.git
-version: 20121001.001
+version: 20130420.000
 x_Dist_Zilla:
   perl:
     version: 5.014002
@@ -106,87 +106,91 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::GETTY/@Basic/GatherDir'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Author::GETTY/@Basic/PruneCruft'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Author::GETTY/@Basic/ManifestSkip'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Author::GETTY/@Basic/MetaYAML'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::License
       name: '@Author::GETTY/@Basic/License'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Author::GETTY/@Basic/Readme'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Author::GETTY/@Basic/ExtraTests'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Author::GETTY/@Basic/ExecDir'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Author::GETTY/@Basic/ShareDir'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Author::GETTY/@Basic/MakeMaker'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Author::GETTY/@Basic/Manifest'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Author::GETTY/@Basic/TestRelease'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Author::GETTY/@Basic/ConfirmRelease'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Author::GETTY/@Basic/UploadToCPAN'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::AutoVersion
       name: '@Author::GETTY/AutoVersion'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: '@Author::GETTY/PkgVersion'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Author::GETTY/MetaConfig'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Author::GETTY/MetaJSON'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Author::GETTY/PodSyntaxTests'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::Repository
       name: '@Author::GETTY/Repository'
-      version: 0.18
+      version: 0.19
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: '@Author::GETTY/GithubMeta'
       version: 0.28
+    -
+      class: Dist::Zilla::Plugin::TravisYML
+      name: '@Author::GETTY/TravisYML'
+      version: 0.96
     -
       class: Dist::Zilla::Plugin::InstallRelease
       name: '@Author::GETTY/InstallRelease'
@@ -198,19 +202,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch
       name: '@Author::GETTY/Git::CheckFor::CorrectBranch'
-      version: 0.004
+      version: 0.006
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
         Dist::Zilla::Plugin::Prereqs:
           phase: test
           type: requires
-      name: '@Author::GETTY/TestMoreWithSubtests'
-      version: 4.300024
+      name: '@Author::GETTY/TestsOfAuthorGETTY'
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::ChangelogFromGit
       name: '@Author::GETTY/ChangelogFromGit'
-      version: 0.005
+      version: 0.006
     -
       class: Dist::Zilla::Plugin::TaskWeaver
       name: '@Author::GETTY/TaskWeaver'
@@ -218,46 +222,46 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::Git::Check
       name: '@Author::GETTY/@Git/Check'
-      version: 1.122530
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Commit
       name: '@Author::GETTY/@Git/Commit'
-      version: 1.122530
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Tag
       name: '@Author::GETTY/@Git/Tag'
-      version: 1.122530
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::Git::Push
       name: '@Author::GETTY/@Git/Push'
-      version: 1.122530
+      version: 2.013
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300024
+      version: 4.300033
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300024
+      version: 4.300033
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300024
+    version: 4.300033
 x_authority: cpan:GETTY
